--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MvvmDemoJaiminSarvan"
         tools:targetApi="31">
         <activity
-            android:name=".TopActivity"
+            android:name=".ui.activity.TopActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,13 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".ui.activity.MainActivity"
             android:exported="true">
         </activity>
-        <activity android:name=".TopHeadLineActivity"
+        <activity android:name=".ui.activity.TopHeadLineActivity"
             android:exported="true">
         </activity>
-        <activity android:name=".SearchTopHeadLineActivity"
+        <activity android:name=".ui.activity.SearchTopHeadLineActivity"
             android:exported="true">
         </activity>
     </application>
